<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    
     <Button
                android:id="@+id/alarm"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/alarm" />
            
            <Button
                android:id="@+id/log"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/log" />
            
            <Button
                android:id="@+id/filter"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/filter" />
            
            <Button
                android:id="@+id/menu"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/menu" />
     
</LinearLayout>